<resources>
    <string name="app_name">Sensor Data Collector</string>
    <string name="title_text">Did you go for jogging today?</string>
    <string name="option1">Acknowledged</string>
    <string name="option2">No</string>
    <string name="aust">AUST</string>
    <string name="nsu">Others</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="group1">10-15</string>
    <string name="group2">18-20</string>
    <string name="group3">21-25</string>
    <string name="group4">25+</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_label">Questionnires</string>
    <string name="menu_gallery">Instructions</string>
    <string name="menu_slideshow">About</string>
    <string name="menu_tnc">Terms and Conditions</string>
    <string name="menu_exit">Exit</string>
    <string name="tictactoe">Tic-Tac-Toe</string>

    <string name="app_name_t">Tic Tac Toe UI</string>
    <string name="_1_player">Solo mode</string>
    <string name="_2_player">Multi-player </string>

    <string name="intent_extra_key_solo_game_mode">SOLO_GAME_MODE</string>
    <string name="x_won">Player X won!</string>
    <string name="o_won">Player O won!</string>
    <string name="tie_game">It\'s a Tie Game. Shake Hands!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionnires">Questionnires</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="exit">Exit</string>


</resources>