<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_label"
            android:icon="@drawable/question"
            android:title="@string/questionnires" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/instructions"
            android:title="@string/instructions" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_tnc"
            android:icon="@drawable/tnc"
            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/nav_tictactoe"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/tic_tac_toe" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signout"
            android:title="@string/exit" />

    </group>
</menu>