<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sensorgpsservice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_label"
        android:name="com.example.sensorgpsservice.ui.label_bg.activity_label"
        android:label="Labeling"
        tools:layout="@layout/fragment_activity_label" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sensorgpsservice.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sensorgpsservice.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tnc"
        android:name="com.example.sensorgpsservice.ui.tnc.tncFragment"
        android:label="@string/menu_tnc"
        tools:layout="@layout/fragment_tnc" />

    <fragment
        android:id="@+id/nav_tictactoe"
        android:name="com.example.sensorgpsservice.ui.tictactoe.TictactoeFragment"
        android:label="@string/tictactoe"
        tools:layout="@layout/tictactoe_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.sensorgpsservice.ui.logout.LogoutFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/logout_fragment" >
    </fragment>
</navigation>