<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#349F6D"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserinfoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#eeee"
        android:layout_margin="25dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:text="University:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:text="Gender:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="260dp"
            android:text="Age Group:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/uni_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/n_aust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="30dp"
                android:checked="false"
                android:text="@string/aust"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>

            <RadioButton
                android:id="@+id/n_nsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:checked="false"
                android:text="@string/nsu"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/gender_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/n_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="140dp"
                android:checked="false"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>

            <RadioButton
                android:id="@+id/n_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:checked="false"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/age_range_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_marginStart="160dp"
                android:layout_marginTop="250dp"
                android:checked="false"
                android:text="@string/group2"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>

            <RadioButton
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:checked="false"
                android:text="@string/group3"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>

            <RadioButton
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_marginStart="160dp"
                android:checked="false"
                android:text="@string/group4"
                android:textColor="@color/black"
                android:textStyle="bold">
            </RadioButton>
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="420dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#20A882"
            app:cornerRadius="25dp"
            android:textSize="18dp"
            android:text="Submit">
        </com.google.android.material.button.MaterialButton>

    </androidx.cardview.widget.CardView>

</RelativeLayout>